force-app/main/default/objects/LMS_Notification__c/LMS_Notification__c.object-meta.xml
<CustomObject>
    <label>LMS Notification</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LMS Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>