force-app/main/default/objects/LMS_Notification__c/fields/LMS_Assignment__c.field-meta.xml
<CustomField>
    <fullName>LMS_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>LMS_Assignment__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>