force-app/main/default/objects/LMS_Notification__c/fields/LMS_Email__c.field-meta.xml
<CustomField>
    <fullName>LMS_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>