force-app/main/default/objects/LMS_Notification__c/fields/LMS_Is_Admin_Alert__c.field-meta.xml
<CustomField>
    <fullName>LMS_Is_Admin_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Admin Alert</label>
    <type>Checkbox</type>
</CustomField>