force-app/main/default/objects/LMS_Notification__c/fields/LMS_Message__c.field-meta.xml
<CustomField>
    <fullName>LMS_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>