force-app/main/default/objects/LMS_Notification__c/fields/LMS_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Notification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>