force-app/main/default/objects/LMS_Notification__c/fields/LMS_Read__c.field-meta.xml
<CustomField>
    <fullName>LMS_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>