force-app/main/default/objects/LMS_Notification__c/fields/LMS_Read_At__c.field-meta.xml
<CustomField>
    <fullName>LMS_Read_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Read At</label>
    <type>DateTime</type>
</CustomField>