force-app/main/default/objects/LMS_Notification__c/fields/LMS_Recipient__c.field-meta.xml
<CustomField>
    <fullName>LMS_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LMS Notifications</relationshipLabel>
    <relationshipName>LMS_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>